<resources>
    <!--login site-->
    <string name="app_name">Gefins</string>
    <string name="skr_inn">Skráðu þig inn!</string>
    <string name="notandanafn">Notandanafn</string>
    <string name="lykilord">Lykilorð</string>
    <string name="skra">Skrá inn</string>
    <string name="nyr_notandi">Nýr notandi</string>
    <string name="nyskraning">Skráðu þig sem nýjan notanda!</string>
    <string name="innskraning">Þú ert skráður inn</string>
    <string name="innskr_villa">Innskráning þín tókst ekki</string>
    <string name="adminSite">Admin síðan</string>
    <!--user site-->
    <string name="user_site">Síðan þín</string>
    <string name="usersite_text2">Skoðaðu auglýsingar:</string>
    <string name="search_button">Allar auglýsingar</string>
    <string name="searchType_button">Leit</string>
    <string name="newAd_button">Gefa eða óska eftir hlut</string>
    <string name="clickSearch">Skoðaðu allar auglýsingar</string>
    <string name="usersite_text1">--------</string>
    <string name="logout_button">Útskrá</string>
    <string name="tolvupostur">Tölvupóstur</string>
    <string name="lykilord_aftur">Endurtakið lykilorð</string>
    <string name="fullt_nafn">Fullt nafn</string>
    <string name="simanumer">Símanúmer</string>
    <string name="postnumer">Póstnúmer</string>
    <string name="heimilisfang">Heimilisfang</string>
    <string name="nyskra">Nýskrá</string>
    <string name="edit_user_button">Stillingar</string>
    <string name="uppfaera">Uppfæra</string>
    <string name="skraauglysingu">Ný auglýsing</string>
    <!--add ad-->
    <string name="nafnaaugl">Nafn á auglýsingu:</string>
    <string name="nafnaaugl2">EKKI Nafn á auglýsingu:</string>
    <string name="nafnaauglysingu">Nafn á auglýsingu</string>
    <string name="lysing">Lýsing:</string>
    <string name="lysing2">Lýsing</string>
    <string name="gefins">Gefins</string>
    <string name="comment">Sjá athugasemdir</string>
    <string name="oskaeftir">Óska eftir</string>
    <string name="skraauglys">Skrá auglýsingu</string>
    <string name="tegund">Tegund:</string>
    <string name="tegundaftegund">Tegund af tegund:</string>
    <string name="litur">Litur:</string>
    <string-array name="hlutir_array">
        <item>Húsgögn</item>
        <item>Fatnaður</item>
        <item>Matur</item>
        <item>Annað</item>
    </string-array>
    <string-array name="husgogn_array">
        <item>Borð</item>
        <item>Stóll</item>
        <item>Sófi</item>
        <item>Hirsla</item>
        <item>Raftæki</item>
        <item>Hreinlætistæki</item>
        <item>Spegill</item>
        <item>Ljós</item>
        <item>Annað</item>
    </string-array>
    <string-array name="matur_array">
        <item>Ávöxtur</item>
        <item>Grænmeti</item>
        <item>Þurrmatur</item>
        <item>Kjöt</item>
        <item>Niðursuðuvara</item>
        <item>Drykkjarvara</item>
        <item>Annað</item>
    </string-array>
    <string-array name="fatnadur_array">
        <item>Buxur</item>
        <item>Bolur</item>
        <item>Skyrta</item>
        <item>Pils</item>
        <item>Blússa</item>
        <item>Höfuðfat</item>
        <item>Skór</item>
        <item>Yfirhöfn</item>
        <item>Aukahlutir</item>
        <item>Annað</item>
    </string-array>
    <string-array name="annad_array">
        <item>Annað</item>
    </string-array>
    <string-array name="litir_array">
        <item>Á ekki við</item>
        <item>Mér er sama</item>
        <item>Gulur</item>
        <item>Rauður</item>
        <item>Grænn</item>
        <item>Blár</item>
        <item>Bleikur</item>
        <item>Fjólublár</item>
        <item>Appelsínugulur</item>
        <item>Drappaður</item>
        <item>Brúnn</item>
        <item>Hvítur</item>
        <item>Svartur</item>
        <item>Grár</item>
        <item>Gylltur</item>
        <item>Silfur</item>
        <item>Brons</item>
        <item>Marglitaður</item>
        <item>Annað</item>
    </string-array>
    <string name="stadsetning">Staðsetning hlutar(póstnúmer):</string>
    <string name="postnumer2">Póstnúmer</string>
    <!--add type-->
    <string name="tilbaka">Til baka</string>
    <string name="addtype">Staðfesta</string>
    <string name="hvaderthetta">Hvað er þetta?</string>
    <string name="texti2">Hvað</string>
    <string name="create_ad_failed">Ekki tókst að búa til nýja auglýsingu. Vinsamlegast reynið aftur.</string>
    <string name="create_ad_success">Ný auglýsing hefur verið búin til.</string>
    <!--display ads-->
    <string name="display_site">Listi yfir auglýsingar</string>
    <string name="network_unavailable_message">Nettenging ekki til staðar</string>
    <string name="display_ads_failed">Ekki tókst að birta auglýsingarnar. Vinsamlegast reynið aftur.</string>
    <string name="display_users_failed">Ekki tókst að birta notendurnar. Vinsamlegast reynið aftur.</string>
    <string name="create_user_failed">Ekki tókst að búa til nýjan notanda. Vinsamlegast reynið aftur.</string>
    <string name="login_failed">Ekki tókst að skrá inn. Vinsamlegast reynið aftur.</string>
    <string name="update_user_failed">Ekki tókst að uppfæra notanda. Vinsamlegast reynið aftur.</string>
    <string name="my_ads">Mínar auglýsingar</string>
    <string name="no_ads_found">Engar auglýsingar fundust</string>
    <string name="no_users_found">Engir notendur fundust</string>
    <string name="til">Til</string>
    <string name="vidfangsefni">Viðfangsefni</string>
    <string name="skilabod">Skilaboð</string>
    <string name="senda">Senda skilaboð</string>
    <string name="senda_skilaboð">Senda ný skilaboð</string>
    <string name="innholf">Innhólf</string>
    <string name="ny_skilaboð">Skrifa einkaskilaboð</string>
    <string name="send_message_failed">Ekki tókst að senda skilaboð.</string>
    <string name="send_message_successful">Skilaboð send!</string>
    <string name="no_messages_found">Engin skilaboð fundust!</string>
    <string name="inbox">Innhólf</string>
    <string name="reply">Svara</string>
    <string name="outbox">Úthólf</string>

    <string name="uppfaera_auglysingu">Uppfæra auglýsingu</string>
    <string name="eyda_auglysingu">Eyða auglýsingu</string>
    <string name="ad_deleted_successfully">Tókst að eyða auglýsingu</string>
    <string name="user_deleted_successfully">Tókst að eyða notanda</string>
    <string name="ad_not_deleted">Ekki tókst að eyða auglýsingu</string>
    <string name="user_not_deleted">Ekki tókst að eyða notanda</string>
    <!--search type site-->
    <string name="search_text1">Auglýsingaleit</string>
    <string name="search_text2">Leitarskilyrðin:</string>
    <string-array name="searchHlutir_array">
        <item>Húsgögn</item>
        <item>Fatnaður</item>
        <item>Matur</item>
        <item>Annað</item>
        <item>Allt</item>
    </string-array>
    <string-array name="searchHusgogn_array">
        <item>Allt</item>
        <item>Borð</item>
        <item>Stóll</item>
        <item>Sófi</item>
        <item>Hirsla</item>
        <item>Raftæki</item>
        <item>Hreinlætistæki</item>
        <item>Spegill</item>
        <item>Ljós</item>
        <item>Annað</item>
    </string-array>
    <string-array name="searchMatur_array">
        <item>Allt</item>
        <item>Ávöxtur</item>
        <item>Grænmeti</item>
        <item>Þurrmatur</item>
        <item>Kjöt</item>
        <item>Niðursuðuvara</item>
        <item>Drykkjarvara</item>
        <item>Annað</item>
    </string-array>
    <string-array name="searchFatnadur_array">
        <item>Allt</item>
        <item>Buxur</item>
        <item>Bolur</item>
        <item>Skyrta</item>
        <item>Pils</item>
        <item>Blússa</item>
        <item>Höfuðfat</item>
        <item>Skór</item>
        <item>Yfirhöfn</item>
        <item>Aukahlutir</item>
        <item>Annað</item>
    </string-array>
    <string-array name="searchAllt_array">
        <item>Allt</item>
    </string-array>
    <string-array name="searchAnnad_array">
        <item>Annað</item>
    </string-array>
    <string-array name="searchLitir_array">
        <item>Allir</item>
        <item>Gulur</item>
        <item>Rauður</item>
        <item>Grænn</item>
        <item>Blár</item>
        <item>Bleikur</item>
        <item>Fjólublár</item>
        <item>Appelsínugulur</item>
        <item>Drappaður</item>
        <item>Brúnn</item>
        <item>Hvítur</item>
        <item>Svartur</item>
        <item>Grár</item>
        <item>Gylltur</item>
        <item>Silfur</item>
        <item>Brons</item>
        <item>Marglitaður</item>
        <item>Annað</item>
    </string-array>
    <!--Admin-site-->
    <string name="adminwelcome">Velkominn kerfisstjóri</string>
    <string name="eydanotanda">Eyða notanda</string>
    <string name="eydaauglysingu">Eyða auglýsingu</string>
    <string name="skodasidu">Allar auglýsingar</string>
    <string name="eyda">Eyða</string>
    <!--edit ad site-->
    <string name="update_ad_success">Auglýsingin þín hefur verið uppfærð</string>
    <string name="update_ad_failed">Ekki tókst að uppfæra auglýsingu. Vinsamlegast reynið aftur.</string>
    <string name="login_activity_label">Gefins</string>
    <string name="register_activity_label">Nýskráning</string>
    <string name="edit_user_activity_label">Breyta notandaupplýsingum</string>
    <string name="add_ad_activity_label">Skrá nýja auglýsingu</string>
    <string name="display_ads_activity_label">Auglýsingar</string>
    <string name="display_single_ad_activity_label">Auglýsing</string>
    <string name="edit_ad_activity_label">Breyta auglýsingu</string>
    <string name="search_type_activity_label">Leit</string>
    <string name="admin_activity_label">Kerfisstjóri</string>
    <string name="add_comment_activity_label">Skrifa athugasemd</string>
    <string name="display_comment_activity_label">Athugasemdir</string>
    <string name="write_message_activity_label">Skrifa skilaboð</string>
    <string name="inbox_activity_label">Innhólf</string>
    <string name="message_details_activity_label">Skilaboð</string>
    <string name="outbox_activity_label">Úthólf</string>
    <string name="admin_delete_user_activity_label">Eyða notanda</string>
    <string name="admin_delete_ad_activity_label">Eyða auglýsingu</string>
    <string name="write_comment">Skrifaðu athugasemd</string>
    <string name="haetta_vid">Hætta við</string>
    <string name="skrifa_athugasemd">Skrifa athugasemd</string>
    <string name="create_user_succeeded">Nýr notandi búinn til. Vinsamlegast skráið ykkur inn.</string>
    <string name="ekki_gilt_notandanafn">Notandanafn ekki gilt</string>
    <string name="titill_tomur">Vinsamlegast takið fram viðfangsefni</string>
    <string name="skilabod_tom">Vinsamlegast skrifið skilaboð</string>

</resources>