<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameofad"
        android:layout_width="113dp"
        android:layout_height="19dp"
        android:text="@string/nafnaaugl"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="28dp" />

    <EditText
        android:id="@+id/nameofad2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nafnaauglysingu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/addescription"
        android:layout_width="43dp"
        android:layout_height="19dp"
        android:text="@string/lysing"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="300dp" />

    <EditText
        android:id="@+id/addescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/lysing2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="330dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="390dp">

        <RadioButton
            android:id="@+id/radio_give"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:duplicateParentState="false"
            android:text="@string/gefins"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="384dp" />

        <RadioButton
            android:id="@+id/radio_take"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/oskaeftir"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="388dp" />
    </RadioGroup>

    <Button
        android:id="@+id/addadbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skraauglys"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tegund"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="100dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="203dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tegundaftegund"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="164dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="203dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="191dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/litur"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="230dp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="203dp"
        android:layout_height="30dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="260dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>