<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/notandanafn"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/email_address"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/tolvupostur"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/full_name"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/fullt_nafn"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/phonenumber"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/simanumer"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/zipcode"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/postnumer"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <EditText
            android:id="@+id/address"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/heimilisfang"
            android:textColorHint="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uppfaera" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haetta_vid"
            />

    </LinearLayout>
</ScrollView>